<resources>
    <string name="AppRestart_SettingsChanged_Action_RestartApp">Restart app</string>
    <string name="AppRestart_SettingsChanged_Message_OutOfSync">Client and server are out of sync!</string>
    <string name="Application_AppRating_Action_RatingNegativeButton">Not now</string>
    <string name="Application_AppRating_Action_RatingRemindMeLater">Remind me later.</string>
    <string name="Application_AppRating_Label_AppRatingDialogCloseButtonText">X</string>
    <string name="Application_AppRating_Label_PleaseRate">Please rate us!</string>
    <string name="Application_AppRating_Label_RatingMessage">If you’re enjoying Roblox please rate our app.</string>
    <string name="Application_AppRating_Label_RatingYes">Yes</string>
    <string name="Application_AppRating_Response_CouldNotLaunchPlayStore">Could not launch Play Store!</string>
    <string name="Application_ConnectionError_Dialog_Title">Connection error</string>
    <string name="Application_Leave_Action_LeaveApp">Leave App</string>
    <string name="Application_Leave_Response_LeaveAppConfirmation">Do you want to leave the app?</string>
    <string name="Application_Logout_Action_Logout">Log Out</string>
    <string name="Application_Logout_Response_LogoutConfirmation">Do you want to log out?</string>
    <string name="Application_Logout_Response_SorryLoggedOut">Sorry! You are logged out.</string>
    <string name="Application_Upgrade_Action_NotNow">Not now</string>
    <string name="Application_Upgrade_Action_Upgrade">Upgrade</string>
    <string name="Application_Upgrade_Response_Title">Roblox Upgrade</string>
    <string name="Application_Upgrade_Response_UpgradeBodyString">Your version of ROBLOX is out of date and will not work properly. Taking you to the %1$s for an upgrade.</string>
    <string name="Authentication_2SV_Action_ResendCode">Resend Code</string>
    <string name="Authentication_2SV_Action_Verify">Verify</string>
    <string name="Authentication_2SV_Label_EnterCode">Enter Code (6-digit)</string>
    <string name="Authentication_2SV_Label_EnterEmailCode">Enter the code we just sent you via email</string>
    <string name="Authentication_2SV_Label_EnterTextCode">Enter the code we just sent you via text message</string>
    <string name="Authentication_2SV_Label_NeedHelp">Need help? Contact %1$s</string>
    <string name="Authentication_2SV_Label_TrustThisDevice">Trust this device for 30 days</string>
    <string name="Authentication_2SV_Label_TwoStepVerification">2-Step Verification</string>
    <string name="Authentication_2SV_Response_AccountIssueErrorTryAgain">Account issue. Please try again or contact Support.</string>
    <string name="Authentication_2SV_Response_CodeSent">Code Sent</string>
    <string name="Authentication_2SV_Response_FeatureNotAvailable">Feature not available. Please contact support.</string>
    <string name="Authentication_2SV_Response_InvalidCode">Invalid code.</string>
    <string name="Authentication_2SV_Response_SystemErrorReturnToLogin">System error. Please return to login screen.</string>
    <string name="Authentication_2SV_Response_TooManyAttempts">Too many attempts. Please try again later.</string>
    <string name="Authentication_2SV_Response_TwoStepEmptyCode">Please enter a valid code.</string>
    <string name="Authentication_2SV_Response_UserNotFound">User not found. Please return to login screen.</string>
    <string name="Authentication_2SV_Response_VerificationDisabled">Verification disabled. Please check your settings.</string>
    <string name="Authentication_Captcha_Action_Reload">Reload</string>
    <string name="Authentication_Captcha_Action_Submit">Submit</string>
    <string name="Authentication_Captcha_Description_CaptchaHint">Type the text</string>
    <string name="Authentication_Captcha_Heading_CaptchaTitle">Please Complete Captcha Challenge</string>
    <string name="Authentication_Captcha_Label_VerifyHuman">Before you continue, we need to verify you are human. Please fill out form below.</string>
    <string name="Authentication_Captcha_Response_CaptchaFailed">Captcha Failed</string>
    <string name="Authentication_Captcha_Response_CaptchaFailedToLoad">Failed to load Captcha - please try restarting the app.</string>
    <string name="Authentication_Login_Action_ForgotPassword">Forgot password</string>
    <string name="Authentication_Login_Action_ForgotPasswordOrUsernameQuestion">Forgot password or username?</string>
    <string name="Authentication_Login_Action_ForgotUsernamePassword">Forgot username/password</string>
    <string name="Authentication_Login_Action_LogInCapitalized">Log In</string>
    <string name="Authentication_Login_Action_Login">Login</string>
    <string name="Authentication_Login_Action_PlayNow">Play Now</string>
    <string name="Authentication_Login_Action_SignUp">Sign up</string>
    <string name="Authentication_Login_Description_CancelButtonContentDesc">loginCancelButton</string>
    <string name="Authentication_Login_Description_LoginButtonContentDesc">loginLoginButton</string>
    <string name="Authentication_Login_Description_PasswordContentDescription">loginPassword</string>
    <string name="Authentication_Login_Description_UsernameContentDescription">loginUsername</string>
    <string name="Authentication_Login_Label_DontHaveAnAccount">"Don't have an account?"</string>
    <string name="Authentication_Login_Label_LogInCapitalized">Log In</string>
    <string name="Authentication_Login_Label_LoggingIn">Logging in</string>
    <string name="Authentication_Login_Label_LoggingInSpinnerText">Logging in…</string>
    <string name="Authentication_Login_Label_Login">Log in</string>
    <string name="Authentication_Login_Label_Login_Uppercase">LOGIN</string>
    <string name="Authentication_Login_Label_NotAMember">Not a member?</string>
    <string name="Authentication_Login_Label_Username">Username</string>
    <string name="Authentication_Login_Label_UsernameEmail">Username/Email</string>
    <string name="Authentication_Login_Label_UsernameEmailPhone">Username/Email/Phone</string>
    <string name="Authentication_Login_Label_UsernamePhone">Username/Phone</string>
    <string name="Authentication_Login_Response_AccountIssueErrorContactSupport">Account issue. Please contact Support.</string>
    <string name="Authentication_Login_Response_ErrorLoginWithUsername">Something went wrong. Please login with your username.</string>
    <string name="Authentication_Login_Response_ForgotPasswordOrUsername">Forgot username/password</string>
    <string name="Authentication_Login_Response_IncorrectCredentialsForgotPasswordMessage">Your credentials are incorrect. Please double check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectEmailOrPasswordMessage">Your password or email is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectEmailPassword">Incorrect email or password.</string>
    <string name="Authentication_Login_Response_IncorrectPhoneOrPasswordMessage">Your password or phone is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectPhonePassword">Incorrect phone or password.</string>
    <string name="Authentication_Login_Response_IncorrectUsernameOrPasswordMessage">Your password or username is incorrect. Please check and try again.</string>
    <string name="Authentication_Login_Response_IncorrectUsernamePassword">Incorrect username or password.</string>
    <string name="Authentication_Login_Response_LoginIssueErrorContactSupport">Login issue. Please contact support.</string>
    <string name="Authentication_Login_Response_MissingUsernamePasswordError">Missing username or password.</string>
    <string name="Authentication_Login_Response_MultipleAccountEmailLoginWithUsername">Your email is associated with more than 1 username. Please login with your username.</string>
    <string name="Authentication_Login_Response_PleaseEnterPassword">Please enter a password.</string>
    <string name="Authentication_Login_Response_PleaseEnterUsername">Please enter a username.</string>
    <string name="Authentication_Login_Response_PleaseTryAgain">Please try again</string>
    <string name="Authentication_Login_Response_SessionExpiredLoginAgain">Your session has expired. Please login again.</string>
    <string name="Authentication_Login_Response_SystemErrorTryLaterContactSupport">System issue. Please try again later. Contact support if problem persists.</string>
    <string name="Authentication_Login_Response_TooManyAttemptsMessage">"You've exceeded the number of attempts. Please try again later or reset your password."</string>
    <string name="Authentication_Login_Response_TooManyAttemptsMessageForEmail">Your password or email is incorrect. Please wait shortly before logging in again.</string>
    <string name="Authentication_Login_Response_TooManyAttemptsMessageForPhone">Your password or phone is incorrect. Please wait shortly before logging in again.</string>
    <string name="Authentication_Login_Response_TooManyAttemptsMessageForUsername">Your password or username is incorrect. Please wait shortly before logging in again.</string>
    <string name="Authentication_Login_Response_UnableToLogIn">Unable to log in.</string>
    <string name="Authentication_Login_Response_UnverifiedEmailLoginWithUsername">Your email is not verified. Please login with your username.</string>
    <string name="Authentication_ResetPassword_Action_Cancel">Cancel</string>
    <string name="Authentication_ResetPassword_Action_Reset">Reset</string>
    <string name="Authentication_ResetPassword_Label_ResetPassword">Reset Password</string>
    <string name="Authentication_ResetPassword_Label_ResetPasswordMessage">Enter your username to reset password.</string>
    <string name="Authentication_ResetPassword_Label_Username">Username</string>
    <string name="Authentication_ResetPassword_Response_UsernameContainsInvalidCharacters">Username contains invalid characters.</string>
    <string name="Authentication_SignUp_Description_BirthdayDaySpinnerContentDesc">rbxBirthdayDaySpinner</string>
    <string name="Authentication_SignUp_Description_BirthdayMonthSpinnerContentDesc">rbxBirthdayMonthSpinner</string>
    <string name="Authentication_SignUp_Description_BirthdayYearSpinnerContentDesc">rbxBirthdayYearSpinner</string>
    <string name="Authentication_SignUp_Description_PasswordHintTextLong">Password (4 letters and 2 numbers min.)</string>
    <string name="Authentication_SignUp_Description_UsernameHintTextLong">Username (6-20 characters, no spaces)</string>
    <string name="Authentication_SignUp_Label_AlmostThere">Almost there!</string>
    <string name="Authentication_SignUp_Label_Birthday">Birthday</string>
    <string name="Authentication_SignUp_Label_PleaseAgreeToTerms">Please agree to our Terms of Use and Privacy Policy.</string>
    <string name="Authentication_SignUp_Response_InvalidBirthday">Invalid birthday.</string>
    <string name="Authentication_SignUp_Response_UsernameContainsInvalidCharacters">Username contains invalid characters.</string>
    <string name="CommonUI_Controls_Action_Cancel">Cancel</string>
    <string name="CommonUI_Features_Action_Done">Done</string>
    <string name="CommonUI_Features_Heading_ReportAbuse">Report Abuse</string>
    <string name="CommonUI_Features_Label_LoremIpsumXl">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="CommonUI_Messages_Label_Password">Password</string>
    <string name="Feature_Chat_Heading_AddFriends">Add Friends</string>
    <string name="Feature_Chat_Heading_LeaveGroup">Leave Group</string>
    <string name="Feature_Chat_Heading_RenameChatGroup">Rename Chat Group</string>
    <string name="Feature_Chat_Heading_ViewParticipants">View Participants</string>
    <string name="Feature_Chat_Heading_ViewProfile">View Profile</string>
</resources>