<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n0:orientation="vertical" n0:layout_width="match_parent" n0:layout_height="match_parent"
  xmlns:n0="http://schemas.android.com/apk/res/android">
    <LinearLayout n0:gravity="center_vertical" n0:orientation="horizontal" n0:layout_width="match_parent" n0:layout_height="0.0dp" n0:layout_weight="0.4">
        <com.roblox.client.components.RbxTextView n0:textSize="@dimen/textSizeSignupHeader" n0:textColor="@color/RbxGray2" n0:gravity="bottom" n0:layout_width="0.0dp" n0:layout_height="wrap_content" n0:text="@string/Authentication_ResetPassword_Label_ResetPassword" n0:layout_weight="2.0" n0:textAllCaps="true" />
    </LinearLayout>
    <com.roblox.client.components.RbxTextView n0:textSize="@dimen/textSizeLabel" n0:textColor="@color/RbxGray2" n0:layout_width="wrap_content" n0:layout_height="wrap_content" n0:text="@string/Authentication_ResetPassword_Label_ResetPasswordMessage" />
    <com.roblox.client.components.RbxEditText n0:id="@id/fragment_reset_password_username_edit" n0:layout_width="match_parent" n0:layout_height="0.0dp" n0:layout_marginTop="3.0dp" n0:layout_weight="0.5" n0:contentDescription="@string/Authentication_ResetPassword_Label_Username" n1:errorText="@string/Authentication_ResetPassword_Response_UsernameContainsInvalidCharacters" n1:hintText="@string/Authentication_ResetPassword_Label_Username" n1:inputType="textNoSuggestions" style="@style/Theme.Roblox.EditText"
      xmlns:n1="http://schemas.android.com/apk/res-auto" />
    <LinearLayout n0:orientation="vertical" n0:paddingTop="12.0dp" n0:paddingBottom="12.0dp" n0:layout_width="match_parent" n0:layout_height="0.0dp" n0:layout_weight="1.0">
        <LinearLayout n0:orientation="horizontal" n0:layout_width="match_parent" n0:layout_height="0.0dp" n0:layout_weight="0.5">
            <Space n0:layout_width="0.0dp" n0:layout_height="match_parent" n0:layout_weight="3.0" />
            <com.roblox.client.components.RbxButton n0:textSize="@dimen/textSizeBtnCancel" n0:layout_gravity="center" n0:id="@id/fragment_reset_password_cancel_button" n0:layout_width="0.0dp" n0:layout_height="50.0dp" n0:text="@string/Authentication_ResetPassword_Action_Cancel" n0:layout_weight="10.0" n0:contentDescription="@string/Authentication_ResetPassword_Action_Cancel" style="@style/Theme.Roblox.Button.Flat.White" />
            <Space n0:layout_width="0.0dp" n0:layout_height="match_parent" n0:layout_weight="1.0" />
            <com.roblox.client.components.RbxProgressButton n0:layout_gravity="center" n0:id="@id/fragment_reset_password_reset_button" n0:layout_width="0.0dp" n0:layout_height="50.0dp" n0:layout_weight="10.0" n0:contentDescription="@string/Authentication_ResetPassword_Action_Reset" n2:buttonTextSize="@dimen/textSizeBtnSubmit" n2:defButtonText="@string/Authentication_ResetPassword_Action_Reset" style="@style/Theme.Roblox.Progress.Button.Blue"
              xmlns:n2="http://schemas.android.com/apk/res-auto" />
            <Space n0:layout_width="0.0dp" n0:layout_height="match_parent" n0:layout_weight="3.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
