<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n0:gravity="center_horizontal" n0:orientation="vertical" n0:background="@color/white" n0:padding="16.0dp" n0:layout_width="match_parent" n0:layout_height="match_parent" n0:weightSum="5.0"
  xmlns:n0="http://schemas.android.com/apk/res/android">
    <LinearLayout n0:orientation="vertical" n0:layout_width="match_parent" n0:layout_height="0.0dp" n0:layout_weight="2.0">
        <TextView n0:textSize="18.0sp" n0:textColor="@color/black" n0:layout_gravity="center_horizontal" n0:layout_width="wrap_content" n0:layout_height="wrap_content" n0:layout_marginBottom="10.0dp" n0:text="@string/Authentication_2SV_Label_TwoStepVerification" style="Theme.Roblox.StandardFontRegular" />
        <ImageView n0:id="@id/imageview_2sv_logo" n0:layout_width="match_parent" n0:layout_height="0.0dp" n0:src="@drawable/two_step_verification_logo_email" n0:layout_weight="2.0" n0:contentDescription="@string/Authentication_2SV_Label_TwoStepVerification" />
        <TextView n0:textSize="14.0sp" n0:textColor="@color/black" n0:gravity="center_horizontal" n0:layout_gravity="center_horizontal" n0:id="@id/textview_2sv_message" n0:layout_width="wrap_content" n0:layout_height="wrap_content" n0:text="@string/Authentication_2SV_Label_EnterEmailCode" style="Theme.Roblox.StandardFontRegular" />
    </LinearLayout>
    <LinearLayout n0:orientation="vertical" n0:layout_width="match_parent" n0:layout_height="wrap_content">
        <com.roblox.client.components.RbxEditText n0:id="@id/edittext_verify_code" n0:layout_width="match_parent" n0:layout_height="wrap_content" n0:layout_marginTop="10.0dp" n1:hintText="@string/Authentication_2SV_Label_EnterCode" n1:inputType="number"
          xmlns:n1="http://schemas.android.com/apk/res-auto" />
        <com.roblox.client.components.RbxProgressButton n0:id="@id/button_verify_code" n0:layout_width="match_parent" n0:layout_height="40.0dp" n0:layout_marginTop="10.0dp" n0:layout_marginBottom="20.0dp" n0:contentDescription="@string/Authentication_2SV_Label_TwoStepVerification" n2:buttonTextSize="16.0sp" n2:defButtonText="@string/Authentication_2SV_Action_Verify" n2:progressTextSize="16.0sp" style="@style/Theme.Roblox.Progress.Button.Green"
          xmlns:n2="http://schemas.android.com/apk/res-auto" />
        <android.support.v7.widget.AppCompatCheckBox n0:textSize="16.0sp" n0:textColor="@color/black" n0:layout_gravity="center_horizontal" n0:id="@id/checkbox_2sv_trust_device" n0:layout_width="wrap_content" n0:layout_height="wrap_content" n0:text="@string/Authentication_2SV_Label_TrustThisDevice" n3:buttonTint="@color/RbxGreen2" style="Theme.Roblox.StandardFontRegular"
          xmlns:n3="http://schemas.android.com/apk/res-auto" />
        <TextView n0:textSize="16.0sp" n0:textColor="@color/blueRobloxSupport" n0:layout_gravity="center_horizontal" n0:id="@id/textview_2sv_resend_code" n0:layout_width="wrap_content" n0:layout_height="wrap_content" n0:layout_marginTop="10.0dp" n0:text="@string/Authentication_2SV_Action_ResendCode" style="Theme.Roblox.StandardFontRegular" />
        <LinearLayout n0:gravity="center_horizontal" n0:orientation="horizontal" n0:layout_width="match_parent" n0:layout_height="wrap_content" n0:layout_marginTop="20.0dp">
            <TextView n0:textSize="14.0sp" n0:id="@id/textview_2sv_support" n0:layout_width="wrap_content" n0:layout_height="wrap_content" style="Theme.Roblox.StandardFontRegular" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
