<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n0:orientation="vertical" n0:id="@id/container" n0:padding="24.0dp" n0:layout_width="match_parent" n0:layout_height="match_parent" n0:minWidth="450.0dp"
  xmlns:n0="http://schemas.android.com/apk/res/android">
    <TextView n0:textSize="20.0dp" n0:layout_width="match_parent" n0:layout_height="wrap_content" n0:text="@string/Authentication_Captcha_Label_VerifyHuman" />
    <FrameLayout n0:background="@drawable/rbx_bg_flat_edittext" n0:layout_width="match_parent" n0:layout_height="100.0dp" n0:layout_marginTop="20.0dp">
        <android.lib.recaptcha.ReCaptcha n0:id="@id/recaptcha" n0:visibility="gone" n0:layout_width="match_parent" n0:layout_height="match_parent" n0:scaleType="fitCenter" n0:adjustViewBounds="true" />
        <ProgressBar n0:id="@id/progress" n0:layout_width="match_parent" n0:layout_height="match_parent" n0:indeterminate="true" style="?android:progressBarStyleLarge" />
    </FrameLayout>
    <View n0:focusable="true" n0:focusableInTouchMode="true" n0:layout_width="0.0px" n0:layout_height="0.0px" />
    <android.support.design.widget.TextInputLayout n0:id="@id/captcha_input_layout" n0:layout_width="match_parent" n0:layout_height="wrap_content" n0:layout_marginTop="20.0dp">
        <EditText n0:id="@id/captcha_input" n0:layout_width="match_parent" n0:layout_height="wrap_content" n0:hint="@string/Authentication_Captcha_Description_CaptchaHint" n0:maxLines="1" n0:inputType="textVisiblePassword" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout n0:gravity="center_horizontal" n0:orientation="horizontal" n0:padding="0.0dp" n0:layout_width="match_parent" n0:layout_height="wrap_content" n0:layout_marginTop="15.0dp">
        <Button n0:textSize="16.0dp" n0:id="@id/verify" n0:padding="8.0dp" n0:layout_width="0.0dp" n0:layout_height="wrap_content" n0:layout_marginLeft="8.0dp" n0:text="@string/Authentication_Captcha_Action_Submit" n0:layout_weight="1.0" />
        <Button n0:textSize="16.0dp" n0:id="@id/reload" n0:padding="8.0dp" n0:layout_width="0.0dp" n0:layout_height="wrap_content" n0:layout_marginLeft="8.0dp" n0:text="@string/Authentication_Captcha_Action_Reload" n0:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
